--- a/ValidateSample/Views/Home/Index.cshtml
+++ b/ValidateSample/Views/Home/Index.cshtml
@@ -59,6 +59,12 @@
         <p><a class="btn btn-default" href="@Url.Action("Remote")">前往 &raquo;</a></p>
         <p><a class="btn btn-default" href="@Url.Action("Index",new{controller="Default1",area="admin"})">Area &raquo;</a></p>
     </div>
+    <div class="col-md-4">
+        <h2>登入</h2>
+        
+        <p><a class="btn btn-default" href="@Url.Action("login01")">前往 &raquo;</a></p>
+       @* <p><a class="btn btn-default" href="@Url.Action("Index",new{controller="Default1",area="admin"})">Area &raquo;</a></p>*@
+    </div>
 </div>
 <div class="row">
     <div class="col-md-4">
